src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Activity Creation</fullName>
        <description>Related to activity creation client management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Support</fullName>
        <description>Salesforce Support requests, tickets, cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action Required</fullName>
        </values>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Trade Support</fullName>
        <description>Trade Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action Required</fullName>
        </values>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Case_Closed_Date__c</fullName>
        <description>Field added for legacy Commercial Diplomacy Cases migrated from CTS that were not migrated with the Date/Time Closed field.</description>
        <inlineHelpText>Case Closed Date from Legacy System.</inlineHelpText>
        <label>Actual Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advocacy_Actions_to_Date_Summary__c</fullName>
        <inlineHelpText>Summary of actions taken and next steps.</inlineHelpText>
        <label>AC Actions to Date Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Case_Description__c</fullName>
        <description>dummy field</description>
        <inlineHelpText>The non-sanitized name of the project.  (Advocacy will put a generic description for the Case in the common fields, or leave that field blank).</inlineHelpText>
        <label>AC Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Competitors__c</fullName>
        <inlineHelpText>Domestic and Foreign firms competing against the client.</inlineHelpText>
        <label>AC Competitors</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Expected_Project_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expected value of the procurement.</inlineHelpText>
        <label>AC Expected Project Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_Expected_US_Export_Content__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expected value of the U.S. export content in the procurement.</inlineHelpText>
        <label>AC Expected U.S. Export Content</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_Foreign_Decision_Makers__c</fullName>
        <inlineHelpText>The entities and/or people involved in the selection process for the project competition.</inlineHelpText>
        <label>AC Foreign Decision Makers</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Official_USG_Advisory_Position__c</fullName>
        <inlineHelpText>The level of advocacy approved for the case.</inlineHelpText>
        <label>AC Official USG Advisory Position</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advocacy_Pro__c</fullName>
        <description>dummy field</description>
        <inlineHelpText>A non-sanitized short title of the global project the client is requesting USG advocacy on.</inlineHelpText>
        <label>AC Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocacy_Project_Status__c</fullName>
        <label>AC Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Due Diligence In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attended_SelectUSA_Investment_Summit_201__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended SelectUSA Investment Summit 201</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Agreement_Notes__c</fullName>
        <label>TANC Agreement Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Case_Origin_Notes__c</fullName>
        <label>TANC Case Origin Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Case_Origin__c</fullName>
        <label>TANC Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Hotline or TANC Mail or Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Congressional Office Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colleague or Past Client Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;C Front Office Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEC Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GKC Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIDO Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Association Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USEAC/Post Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CD_Case_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TANC Case Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CD_Compliance_Case_Initiated_Date__c</fullName>
        <label>TANC Compliance Case Initiated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CD_Compliance_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12/15/14 - changed label and name from &quot;Compliance Case&quot;

Select if this is a Compliance Case</description>
        <inlineHelpText>Select if this is a Compliance Case</inlineHelpText>
        <label>TANC Compliance Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Describe_Other_Trade_Barrier_Area_s__c</fullName>
        <label>TANC Describe Other Trade Barrier Areas</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Explanation_of_Case_Value__c</fullName>
        <inlineHelpText>How the value was determined (e.g., “Trade Data” or “Client Input”)</inlineHelpText>
        <label>TANC Explanation of Case Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Initiation_Summary__c</fullName>
        <inlineHelpText>This is the brief description of the problem as well as why ITA is working on the issue (to cover ITA interest).</inlineHelpText>
        <label>TANC Initiation Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Interested_Parties__c</fullName>
        <label>TANC Interested Parties</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Relevant_Agreement__c</fullName>
        <inlineHelpText>Whether there is a trade agreement in force that covers the trade problem that is the central issue of the case.</inlineHelpText>
        <label>TANC Relevant Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed/Decision Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CD_Success_Definition__c</fullName>
        <inlineHelpText>The description of what ITA is aiming to do in the case.</inlineHelpText>
        <label>TANC Success Definition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Tanc_Tags__c</fullName>
        <label>TANC Tags</label>
        <picklist>
            <picklistValues>
                <fullName>TANC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2011 or earlier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in WTO Committee 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in T-TIP Negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raised in TPP Negotiations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Bilateral Dialogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Total Economic Engagement (TEE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Agreement Accession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred for dispute settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NTE 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBT Report 2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS Report 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS Report 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPS Report 2012</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CD_Trade_Barrier__c</fullName>
        <inlineHelpText>The general “issue” that is being addressed by the case.</inlineHelpText>
        <label>TANC Trade Barrier Areas</label>
        <picklist>
            <picklistValues>
                <fullName>Border Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs Procedures Class Valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs Fees or Formalities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rules of Origin Certificates of Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preshipment Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Facilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tariffs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Standards TBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Animal Standards SPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Coherence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corruption Bribery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Influence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Owned Enterprises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD CVD Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safeguards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotas Import Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antimonopoly</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CTS_ID__c</fullName>
        <description>Legacy CTS ID of Incident, Advocacy, or CDS</description>
        <label>CTS ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy CTS Organization ID</description>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_18_ID__c</fullName>
        <description>provides case safe 18 character ID for use in reporting</description>
        <formula>casesafeid(Id)</formula>
        <label>Case 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Close_Summary__c</fullName>
        <label>Case Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Contributor_Rollup__c</fullName>
        <label>Case Contributor Rollup</label>
        <summaryForeignKey>Case_Contributor__c.Case_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <label>Case Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Objective__c</fullName>
        <label>Client Objective</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this is a Compliance Case</inlineHelpText>
        <label>Compliance Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>Contact.FirstName &amp;&apos; &apos;&amp;  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_copy__c</fullName>
        <label>Contact Name copy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_is_Active__c</fullName>
        <description>Status Value for Related Contact.  Works in conjunction with Validation Rule to prevent deletes for Inactive Contacts.</description>
        <formula>Contact.Active__c</formula>
        <label>Contact is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Number__c</fullName>
        <label>Control Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_AccountName_to_Text__c</fullName>
        <description>This field is used to copy the AccountName lookup to text which will be used for global search</description>
        <label>Copy AccountName to Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Contact_Email__c</fullName>
        <label>Copy Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Contact_Phone__c</fullName>
        <description>Holds the phone number of the Clients phone number (used for EXIM Export)</description>
        <label>Copy_Contact_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_in_Case_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country in Case Rollup</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Count of days open between Today and Created Date.</description>
        <formula>IF( ISNULL(  ClosedDate ) ,
            TODAY()  -    DATEVALUE( Actual_Create_Date__c )   , 
            ClosedDate   -    Actual_Create_Date__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee-Based Services</label>
        <picklist>
            <picklistValues>
                <fullName>No Fee-Based Services Used</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Facilitation Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BuyUSA.gov Business Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Market Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Featured US Exporters (FUSE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Key Matching Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Use Only - Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Market Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Company Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Partner Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum Key Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quicktake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Company Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tourism Research Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Location Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Mission</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Calculation_2015__c</fullName>
        <label>Fiscal Year Calculation 2015</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Text(YEAR(DATEVALUE(CreatedDate + 92 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Buyer_Delegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to capture if activity is associated with a Foreign Buyer Delegate at this time. FBD is not a permanent identifier, is per activity basis.</description>
        <label>Foreign Buyer Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IP_Case_Origin_Other__c</fullName>
        <inlineHelpText>Investment Promo Case Origin - Other</inlineHelpText>
        <label>SUSA Case Origin - Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Case_Origin__c</fullName>
        <inlineHelpText>Investment Promotion Case Origin</inlineHelpText>
        <label>SUSA Case Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Ref from Foreign Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref from USEAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref from GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ref from Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSA.gov Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business.gov Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Case_Reason__c</fullName>
        <description>Investment Promotion Case Reason</description>
        <inlineHelpText>Purpose of the Case.</inlineHelpText>
        <label>SUSA Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Information Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research &amp; Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectUSA Investment Summit Attendee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Client_Type__c</fullName>
        <inlineHelpText>Type of organization.</inlineHelpText>
        <label>SUSA Client Type</label>
        <picklist>
            <picklistValues>
                <fullName>Foreign Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. EDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. State/Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign EDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider/Consultant/Lawyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Academia/Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_EDO_Type__c</fullName>
        <description>Investment Promotion EDO Type</description>
        <inlineHelpText>Describes the type of EDO.</inlineHelpText>
        <label>SUSA EDO Type</label>
        <picklist>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IP_Service_Provided_to_Date_Summary__c</fullName>
        <description>Investment Promotion Service Provided to Date Summary</description>
        <inlineHelpText>A summary of actions provided.</inlineHelpText>
        <label>SUSA Service Provided to Date Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITA_Action_Plan__c</fullName>
        <label>ITA Action Plan</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Industry_Rollup_Sum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to calculate the number of related industry in case object.</description>
        <label>Industry Rollup Sum</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>